src/tests/snapshots/synoik__tests__window_opening__check_target_size@fsF-ofT-dwP0.25-dhF500-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open fullscreen: false\nopen floating: true\ndefault column width: P0.25\ndefault window height: F500\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 320 × 500, bounds: 1280 × 720, states: []

post-map configures:
size: 320 × 500, bounds: 1280 × 720, states: []
size: 320 × 500, bounds: 1280 × 720, states: [Activated]
